--- a/sistema de lecheria/paginas/Principal.html
+++ b/sistema de lecheria/paginas/Principal.html
@@ -106,5 +106,108 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-col">
+                <h3>Lácteos y Quesos Don Joaquin</h3>
+                <p>Elaboramos productos artesanales con el sabor fresco que nos distingue.</p>
+            </div>
+            <div class="footer-col">
+                <h3>Enlaces</h3>
+                <ul>
+                    <li><a href="#home">Inicio</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#nosotros">Nosotros</a></li>
+                    <li><a href="#productos">Productos</a></li>
+                    <li><a href="#contactos">Contactos</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Contáctanos</h3>
+                <p>Tel: +507 6000-0000</p>
+                <p>Email: info@donjoaquin.com</p>
+                <div class="social">
+                    <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="facebook"></a>
+                    <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="instagram"></a>
+                    <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733635.png" alt="twitter"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Lácteos y Quesos Don Joaquin. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
+    <style>
+        footer {
+            background-color: #5a3523;
+            color: #f0f0f0;
+            padding: 40px 20px 20px;
+            margin-top: 40px;
+        }
+
+        .footer-container {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            max-width: 1100px;
+            margin: auto;
+        }
+
+        .footer-col {
+            flex: 1;
+            min-width: 250px;
+            margin: 10px;
+        }
+
+            .footer-col h3 {
+                margin-bottom: 15px;
+                font-size: 20px;
+            }
+
+            .footer-col p, .footer-col ul {
+                font-size: 16px;
+                line-height: 1.6;
+            }
+
+            .footer-col ul {
+                list-style: none;
+                padding: 0;
+            }
+
+                .footer-col ul li {
+                    margin-bottom: 8px;
+                }
+
+                    .footer-col ul li a {
+                        color: #f0f0f0;
+                        text-decoration: none;
+                        transition: color 0.3s;
+                    }
+
+                        .footer-col ul li a:hover {
+                            color: #d9d3ce;
+                        }
+
+        .social a img {
+            width: 28px;
+            margin-right: 10px;
+            transition: transform 0.3s;
+        }
+
+            .social a img:hover {
+                transform: scale(1.1);
+            }
+
+        .footer-bottom {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+            border-top: 1px solid #d9d3ce;
+            padding-top: 15px;
+        }
+    </style>
+
 </body>
 </html>
