pagina de ganado creada, y seccion de ganado anadida a la barra de menu

--- a/sistema de lecheria/paginas/ganado.html
+++ b/sistema de lecheria/paginas/ganado.html
@@ -63,100 +63,12 @@
     </nav>
     <main>
 
+        <body>
 
 
-
-
-
-
-
-        <div class="container bloque-1">
-            <div class="row align-items-stretch">
-
-                <div class="dark_container column-bloque">
-                    <div class="heading">
-                        <h3>Permanentes Controles</h3>
-                        <h4>de calidad</h4>
-                        <p>
-                            La materia prima de nuestros lácteos y quesos se procesa recién se produce en fincas excepcionales en Chiriquí.
-                        </p>
-                        <p>
-                            Contamos con leche de la mejor calidad en nuestra fábrica todos los días que nos permite desarrollar productos muy frescos, de mejor textura y sabor.
-                        </p>
-                    </div>
-                </div>
-
-
-                <!-- Columna imagen -->
-
-                <img src="../imagenes/img01.png" alt="Imagen al lado" class="imagen-lateral" title="imagen de una persona feliz abrazando una vaca">
-            </div>
-
-        </div>
-
-
-        <div class="container bloque-2">
-            <h3>
-                ¿Porque nuestra leche es la mejor del mercado?
-            </h3>
-            <p>
-                La calidad de la leche puede ser influenciada por varios factores, incluyendo la raza de la vaca, su alimentación, el manejo del rebaño y las condiciones de ordeño. En Lácteos y Quesos Don Joaquín, nos aseguramos de que nuestras vacas lecheras sean de razas reconocidas por su alta producción y calidad de leche.
-            </p>
-        </div>
-
-
-
-        <div class="container bloque-3">
-            <h3 class="subtitulo-3">Las diferentes razas de vacas lecheras que tenemos son:</h3>
-
-            <div class="recuadros">
-                <div class="cuadro">
-                    <h4>Holstein</h4>
-                    <p>De origen holandés, altamente productiva en volumen.</p>
-                    <img src="../imagenes/imagenes-razas/Vaca-holstein.png" alt="Vaca Holstein" title="Vaca Holstein">
-                </div>
-
-                <div class="cuadro">
-                    <h4>Sindhi</h4>
-                    <p> De origen pakistani, adaptada a climas cálidos y húmedos.</p>
-                    <img src="../imagenes/imagenes-razas/Vaca-sindhi.png" alt="Vaca Sindhi" title="Vaca Sindhi">
-                </div>
-
-                <div class="cuadro">
-                    <h4>Jersey</h4>
-                    <p>De origen inglés, produce leche con alto contenido de grasa y proteína.</p>
-                    <img src="../imagenes/imagenes-razas/Vaca-jersey.png" alt="Vaca Jersey" title="Vaca Jersey">
-                </div>
-            </div>
-        </div>
-
-
-
-        <div class="container bloque-3">
-            <h3 class="subtitulo-3">Nuestro producto prosede de las mejores fincas. Estas son:</h3>
-
-            <div class="recuadros">
-                <div class="cuadro">
-                    <h4>Finca de Grado A</h4>
-                    <p>Santa Genoveva es un ejemplo de ganadería moderna, tecnificada y de alta productividad. Representa la máxima inversión y eficiencia.</p>
-                    <img src="../imagenes/fincas/1.jpg" alt="Vaca Holstein" title="Vaca Holstein">
-                </div>
-
-                <div class="cuadro">
-                    <h4>Finca de Grado B: Finca El Recuerdo</h4>
-                    <p> El Recuerdo es una finca ganadera tradicional y funcional. Es productiva y rentable, pero con margen de mejora mediante la tecnificación.</p>
-                    <img src="../imagenes/fincas/2.jpg" alt="Vaca Sindhi" title="Vaca Sindhi">
-                </div>
-
-                <div class="cuadro">
-                    <h4>Finca de Grado C: Predio La Fortuna</h4>
-                    <p>La Fortuna es una finca de ganadería extensiva y de subsistencia. Requiere una inversión grande y urgente en rehabilitación para ser productiva y sostenible.</p>
-                    <img src="../imagenes/fincas/3.png" alt="Vaca Jersey" title="Vaca Jersey">
-                </div>
-            </div>
-        </div>
 
     </main>
+
 
     <!-- Footer -->
     <footer>
@@ -171,6 +83,7 @@
                     <li><a href="#home">Inicio</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
+                    <li><a href="ganado.html">Ganado</a></li>
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#contactos">Contactos</a></li>
                 </ul>
