correccion de los errores relacionados con los nombres de las paginas

--- a/sistema de lecheria/paginas/Principal.html
+++ b/sistema de lecheria/paginas/Principal.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
@@ -56,7 +57,7 @@
     <nav class="w3-bar">
         <a href="#home" class="w3-button w3-bar-item">HOME</a>
         <a href="#blog" class="w3-button w3-bar-item">BLOG</a>
-        <a href="ganado.html" class="w3-button w3-bar-item">GANADO</a>
+        <a href="Ganado.html" class="w3-button w3-bar-item">GANADO</a>
         <a href="#nosotros" class="w3-button w3-bar-item">NOSOTROS</a>
         <a href="#productos" class="w3-button w3-bar-item">PRODUCTOS</a>
         <a href="#contactos" class="w3-button w3-bar-item">CONTACTOS</a>
