--- a/sistema de lecheria/paginas/ganado.html
+++ b/sistema de lecheria/paginas/ganado.html
@@ -54,16 +54,16 @@
     </header>
     <!--Barra de menu-->
     <nav class="w3-bar">
-        <a href="#home" class="w3-button w3-bar-item">HOME</a>
+        <a href="principal.html" class="w3-button w3-bar-item">HOME</a>
         <a href="#blog" class="w3-button w3-bar-item">BLOG</a>
-        <a href="ganado.html" class="w3-button w3-bar-item">GANADO</a>
+      <a href="ganado.html" class="w3-button w3-bar-item">GANADO</a>
         <a href="#nosotros" class="w3-button w3-bar-item">NOSOTROS</a>
         <a href="#productos" class="w3-button w3-bar-item">PRODUCTOS</a>
         <a href="#contactos" class="w3-button w3-bar-item">CONTACTOS</a>
     </nav>
     <main>
 
-        <body>
+        
 
 
 
